fix: alignments

--- a/portfolio/Page1.css
+++ b/portfolio/Page1.css
@@ -86,8 +86,9 @@ section .heading{
     /* padding-right:30px; */
 }
 .img {
-    width: 30rem;
-    height: 30rem;
+    width: 100%;
+    min-height: 50%;
+    padding: 15px;
 }
 .contentbox p {
     width: 500px;
@@ -140,6 +141,7 @@ section .heading{
     font-size: 20px;
     font-weight: 650;
     margin-bottom: 10px;
+    margin-left: 10px;
 }
 .formbox form input,
 .formbox form textarea {
@@ -151,7 +153,27 @@ section .heading{
     background: #222;
     color: #fff;
     resize:none;
+    border-radius: 15px;
 }
 .formbox form textarea {
     height: 100px;
+}
+.formbox form input::placeholder,
+.formbox form textarea::placeholder {
+    color: #999;
+}
+.formbox form input[type="submit"]
+{
+    border: none;
+    background-color: rgb(10, 29, 128);
+    color: white;
+    font-size: 15px;
+    width: 20%;
+    height: 20%;
+    padding: 15px;
+    border-radius: 15px;
+}
+.formbox form input[type="submit"]:hover {
+    border-color: rgb(2, 1, 61);
+    background-color: rgb(2, 1, 61);
 }
